--- a/Source/MyVanity/MyVanity.Web/Views/Agent/Create.cshtml
+++ b/Source/MyVanity/MyVanity.Web/Views/Agent/Create.cshtml
@@ -1,5 +1,5 @@
 ﻿@using MyVanity.Common
-@using MyVanity.Web.Helpers.MvcHelpers
+@using MyVanity.Web.MvcHelpers
 @model MyVanity.Model.AgentModels.Impl.AgentEditModel
 
 @{
