--- a/Source/MyVanity/MyVanity.Web/Views/Agent/EditorTemplates/AgentEditModel.cshtml
+++ b/Source/MyVanity/MyVanity.Web/Views/Agent/EditorTemplates/AgentEditModel.cshtml
@@ -1,4 +1,4 @@
-﻿@using MyVanity.Web.Helpers.MvcHelpers
+﻿@using MyVanity.Web.MvcHelpers
 @model MyVanity.Model.AgentModels.Impl.AgentEditModel
 
 @Html.ValidationSummary(true)
