--- a/Source/MyVanity/MyVanity.Web/Views/Patient/Edit.cshtml
+++ b/Source/MyVanity/MyVanity.Web/Views/Patient/Edit.cshtml
@@ -14,7 +14,7 @@
         @Html.EditorForModel()    
         
         <div class="form-group">
-            @Html.LabelFor(model => model.Number, new { @class = "control-label col-md-2" })
+            @Html.LabelFor(model => model.Id, new { @class = "control-label col-md-2" })
             <div class="col-md-10">
                 @Html.DisplayFor(model => model.Id)
             </div>
