--- a/Source/MyVanity/MyVanity.Web/Views/Patient/Index.cshtml
+++ b/Source/MyVanity/MyVanity.Web/Views/Patient/Index.cshtml
@@ -14,7 +14,7 @@
     </p>
 }
 
-@Html.EditorFor(model => model.Patients, "PatientList")
+@Html.EditorFor(model => model.Items, "PatientList")
 
 @section scripts {
     @Scripts.Render("~/Content/system-js/patient-index-module.js")
