--- a/Source/MyVanity/MyVanity.Web/Views/Shared/EditorTemplates/ProfileModel.cshtml
+++ b/Source/MyVanity/MyVanity.Web/Views/Shared/EditorTemplates/ProfileModel.cshtml
@@ -1,4 +1,4 @@
-﻿@using MyVanity.Web.Helpers.MvcHelpers
+﻿@using MyVanity.Web.MvcHelpers
 @model MyVanity.Model.ProfileModels.Profile.Impl.ProfileModel
 
 <h4 class="form-header">Contact Information</h4>
